#858 Fix truncation in plugins pane

--- a/src/stylesheets/components/_prefs.scss
+++ b/src/stylesheets/components/_prefs.scss
@@ -80,6 +80,7 @@
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
+    min-width: 0;
   }
 
   .pane {
